Paginado control guias y control correlativo
