# routes/controlCorrelativo.router.js
@@ -12,9 +12,8 @@ router.get('/',
   authenticateJWT,
   async (req, res, next) => {
   try {
-    const agencia = req.headers.agencia;
-    const tipo = req.headers.tipo;
-    const correlativos = await service.find(agencia, tipo);
+    const { page, limit, order_by, order_direction, agencia, tipo } = req.headers;
+    const correlativos = await service.find(page, limit, order_by, order_direction, agencia, tipo);
     res.json(correlativos);
   } catch (error) {
     next(error);
